# ProjectDesignJupyter

./: .gitignore  01-Project-Design-tasks.ipynb  README.md  plot_aoa_network.py  pyproject.toml  verify-project-design.ipynb
project_utils/: project.py
