[project]
name = "projectdesignjupyter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Raphael Knaus", email = "raphael.knaus@software-natives.ch" }
]
dependencies = [
    "pandas>=2.3.1",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "networkx>=3.5",
    "matplotlib>=3.10.3",
    "ipympl>=0.9.7",
    "qgridnext>=2.0.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
]

[tool.uv]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/projectdesignjupyter"]
